[package]
name = "adversarial_search"
version = "0.1.0"
authors = ["Robert Serrano Kobylyansky <sk.robchik@gmail.com>"]
description = "Rust adversarial search library"
license = "MIT"
homepage = "https://github.com/skrobchik/adversarial_search"
repository = "https://github.com/skrobchik/adversarial_search"
documentation = "https://github.com/skrobchik/adversarial_search"
keywords = ["artificial intelligence", "ai", "adversarial", "search", "minimax"]
categories = ["algorithms"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
